RESOLVED FIXED74902
-webkit-cross-fade doesn't respect background-size
https://bugs.webkit.org/show_bug.cgi?id=74902
Summary -webkit-cross-fade doesn't respect background-size
Tim Horton
Reported 2011-12-19 18:46:35 PST
Created attachment 119970 [details] repro The attached repro demonstrates that -webkit-cross-fade doesn't respect the background-size property. The two images should be identical.
Attachments
repro (5.77 KB, application/zip)
2011-12-19 18:46 PST, Tim Horton
no flags
very tiny patch (33.72 KB, patch)
2012-01-16 12:17 PST, Tim Horton
simon.fraser: review+
webkit.review.bot: commit-queue-
Radar WebKit Bug Importer
Comment 1 2011-12-19 18:47:14 PST
Tim Horton
Comment 2 2012-01-12 16:21:35 PST
I have a patch.
Tim Horton
Comment 3 2012-01-13 16:42:54 PST
*** Bug 73523 has been marked as a duplicate of this bug. ***
Tim Horton
Comment 4 2012-01-16 12:17:52 PST
Created attachment 122672 [details] very tiny patch
WebKit Review Bot
Comment 5 2012-01-16 17:40:42 PST
Comment on attachment 122672 [details] very tiny patch Rejecting attachment 122672 [details] from commit-queue. New failing tests: css3/images/cross-fade-background-size.html css3/images/cross-fade-overflow-position.html Full output: http://queues.webkit.org/results/11111009
WebKit Review Bot
Comment 6 2012-01-16 22:32:15 PST
Comment on attachment 122672 [details] very tiny patch Attachment 122672 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11262074 New failing tests: css3/images/cross-fade-background-size.html css3/images/cross-fade-overflow-position.html
Tim Horton
Comment 7 2012-01-17 11:03:31 PST
Landed as r105172, will need new baselines!
Note You need to log in before you can comment on or make changes to this bug.