-webkit-cross-fade doesn't respect background-size https://bugs.webkit.org/show_bug.cgi?id=74902 <rdar://problem/10605289>

Reviewed by Simon Fraser.

CrossfadeGeneratedImage should report its intrinsic size, instead of
improperly conforming to the size of its container.

Test: css3/images/cross-fade-background-size.html

* platform/graphics/CrossfadeGeneratedImage.h:
(WebCore::CrossfadeGeneratedImage::setContainerSize):
(WebCore::CrossfadeGeneratedImage::usesContainerSize):
(WebCore::CrossfadeGeneratedImage::hasRelativeWidth):
(WebCore::CrossfadeGeneratedImage::hasRelativeHeight):
(WebCore::CrossfadeGeneratedImage::size):

Add a test (cross-fade-background-size.html) which ensures that the
background-size CSS property interacts reasonably with -webkit-cross-fade.

Modify cross-fade-overflow-position to hit both the tiled and non-tiled codepaths.

* css3/images/cross-fade-background-size.html: Added.
* css3/images/cross-fade-overflow-position.html:
* css3/images/resources/stripes-large.png: Added.
* css3/images/resources/stripes-small.png: Added.
* platform/mac/css3/images/cross-fade-background-size-expected.png: Added.
* platform/mac/css3/images/cross-fade-background-size-expected.txt: Added.
* platform/mac/css3/images/cross-fade-overflow-position-expected.png:
* platform/mac/css3/images/cross-fade-overflow-position-expected.txt:



Canonical link: https://commits.webkit.org/93283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105172 268f45cc-cd09-0410-ab3c-d52691b4dbfc